crates/typechecker/tests/typechecker/snapshots/main__typechecker__fixtures__extern_method_type_params.snap
---
source: crates/typechecker/tests/typechecker/fixtures.rs
expression: snapshot
---
eq: forall a. (a, a) -> Bool
lt: forall a. (a, a) -> Bool
combine: forall a. (a, a) -> a
sub: forall a. (a, a) -> a
mul: forall a. (a, a) -> a
div: forall a. (a, a) -> a
neg: forall a. (a) -> a
show: forall a. (a) -> String
hash: forall a. (a) -> Int
dispose: forall a. (~a) -> Unit
peek: forall a. (a) -> a
last: forall a. (List[a]) -> Option[a]
sort_by: forall b a. (List[a], (a) -> b) -> List[a] where b: Ord
filter: forall a. (List[a], (a) -> Bool) -> List[a]
to_list: forall a. (Vec[a]) -> List[a]
map: forall a. (a[d], (d) -> e) -> a[e]
fold: forall a. (a[d], e, (e, d) -> e) -> e
println: forall a. (a) -> Unit where a: Show
Some: forall a. (a) -> Option[a]
None: forall a. Option[a]
Ok: forall a b. (b) -> Result[a, b]
Err: forall a b. (a) -> Result[a, b]
Cons: forall a. (a, List[a]) -> List[a]
Nil: forall a. List[a]
LT: Ordering
EQ: Ordering
GT: Ordering
raw_println: forall a. (a) -> Unit
